# travelist

./: .cursorrules  .env  .env.example  .gitignore  AI_CONTEXT.md  CHANGELOG.md  CLEANUP_AUDIT.md  FEATURES_HEBREW.md  FREE_AI_MODELS.md  HANDOFF.md  IOS26_TRANSFORMATION.md  LICENSE  NOTICE  QUICKSTART.md  README.md  README_backup.md  ROADMAP.md  TESTING_CHECKLIST.md  action_items.md  capacitor.config.dev.ts  capacitor.config.prod.ts  capacitor.config.ts  check_tickets.py  cleanup_duplicates.py  cli.py  create_missing_ticket.py  credentials.json  crew_steve.py  crew_steve_core.py  crew_steve_showcase.py  data_collector.py  debug-ios.html  eslint.config.js  example_executive_summary.md  example_executive_summary_sprint_25.md  final_test.py  index.html  jira_ai_strategy_tickets.py  jira_checker.py  jira_test_pusher.py  (+16 more)
.antigravity/: config.json
agents/: alignment_evaluator.py  founder_voice.py  rewrite_strategist.py  theme_synthesizer.py  ticket_ingestor.py
config/: agents.yaml  principles.yaml  settings.yaml
core/: __init__.py  jira_client.py  orchestrator.py  schemas.py
docs/: APP_STORE_COPY.md  PRIVACY_POLICY.md  README.dev.md  README_FULL.md  SUPPORT.md
functions/: package-lock.json  package.json
guides/: AI_ARCHITECTURE.md  AI_SUGGESTIONS.md  APPLE_MAPS_STATUS.md  APP_STORE_DEPLOYMENT.md  CODE_MAINTENANCE.md  CONTEXT.md  FILTERS_AND_LAYOUT.md  IOS26_TRANSFORMATION.md  IOS_DEVELOPMENT.md  MOBILE_TO_IDE_BRIDGE.md  ONBOARDING.md  ONBOARDING_REDESIGN_PROMPT.md  README.md  ROADMAP.md  SHARE_EXTENSION_STATUS.md  UI_UX_PATTERNS.md
jira-alignment/: CLAUDE.md  (+8 more)
(+351 files in other folders)
